<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Toolbar.NotificationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextSearchNotification"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:hint="Search query term"
            tools:ignore="HardcodedText,TextFields"
            android:importantForAutofill="no"
            tools:targetApi="o" />


        <LinearLayout
            android:id="@+id/checkboxLL1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextSearchNotification"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/artsCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Arts"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/politicsCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Politics"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxLL2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkboxLL1"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/businessCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Business"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/sportsCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sports"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkboxLL3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkboxLL2"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/entrepreneursCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Entrepreneurs"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/travelCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Travel"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <TextView
            android:id="@+id/theLine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/checkboxLL3"
            android:layout_margin="20dp"
            android:background="#696969" />

        <TextView
            android:id="@+id/oncePerDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/theLine"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:text="Enable notifications (once per day)"
            android:textColor="#000"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />


        <Switch
            android:id="@+id/notificationSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/theLine"
            android:layout_toEndOf="@+id/oncePerDay" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>