...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:hint="Search query term"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutDate"
            android:weightSum="2">

            <EditText
                android:id="@+id/editTextBeginDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:clickable="true"
...
                android:hint="MM/DD/YY"
                tools:ignore="HardcodedText,KeyboardInaccessibleWidget,TextFields"
                android:importantForAutofill="no"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editTextEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:clickable="true"
...
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextLL"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/artsCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Arts"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/politicsCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Politics"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
...
            android:layout_height="wrap_content"
            android:layout_below="@id/checkboxLL1"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/businessCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Business"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/sportsCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sports"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
...
            android:layout_height="wrap_content"
            android:layout_below="@id/checkboxLL2"
            android:layout_marginTop="30dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/entrepreneursCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="Entrepreneurs"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

            <CheckBox
                android:id="@+id/travelCB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Travel"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkboxLL3"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
...
